static/css/style.css
html {
    font-family: "Verdana","Geneva","sans-serif";
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

body {
    margin: 0;
}

hr {
    padding-left: 17px;
    padding-right: 17px;
    height: auto;
    position: relative;
    border-top: 1px solid #999;
}

a, a:visited {
    color: #4780d7;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    color:#4780d7;
}

h1, h2, h3 {
    display: block;
}

ul {
    list-style-type: disc;
    font-size: 14px;
}

li {
    display: list-item;
    text-align: -webkit-match-parent;
}

.icon {
    margin-left: 3px;
    margin-right: 3px;
}

#header {
    background: #ffffff;
    color: #000000;
    font-size: 12px;
    text-align: center;
}

#slogan {
    text-align: center;
    background: #ffffff;
    color: #000000;
    font-size: 1.4em;
    font-style: italic;
    padding-top: 25px;
    padding-bottom: 25px;
    line-height: 1.2em;
    z-index: 11;
    position: relative;
}

#banner {
    background: #a8c2e2;
}

#banner_image {
    background: #a8c2e2;
    width: 246px;
    margin: 0 auto;
}

#navigation {
    height: 36px;
    display: block;
    background: #ffffff;
    text-align: center;
    color: #1c0d0d;
    font-size: 18px;
    letter-spacing: 1px;
    text-transform: uppercase;
}

#main {
    background-color: #ffffff;
    color: #1c0d0d;
    font-size: 15px;
    z-index: 10;
    margin: 0 auto;
    max-width: 870px;
    position: relative;
    padding-left: 30px;
    padding-right: 30px;
    line-height: 1.6em;
    font-family: "Verdana","Geneva","sans-serif";
}

#main h1 {
    font-size: 1.2em;
    line-height: 1.6em;
    letter-spacing: 1px;
    font-weight: normal;
    font-style: normal;
    text-transform: uppercase;
}

#main h2 {
    font-size: 1.2em;
    line-height: 1.6em;
    letter-spacing: 1px;
    font-weight: normal;
    font-style: normal;
    text-transform: uppercase;
}

#main h3 {
    font-size: 1em;
    line-height: 1em;
    letter-spacing: 1px;
    margin-bottom: 1.2em;
}

#main p {
    display: block;
    -webkit-margin-before: 1em;
    -webkit-margin-after: 1em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    font-size: 14px;
    line-height: 1.6em;
    letter-spacing: 0px;
    margin-bottom: 10px;
    margin-top: 0px;
}

#footer {
    text-align: left;
    font-size: 13px;
    color: grey;
}

#footer ul {
    list-style-type: none;
    text-align: center;
}

#footer ul li {
    display: inline;
}

#footer ul li a {
    text-decoration: none;
    color: #1c0d0d;
    background-color: #ffffff;
}

#twitter_stream {
    text-align: center;
    padding-top: 60px;
}

.navbar-default {
    background-color: #ffffff;
    border-color: #ffffff;
    font-size: 1.1em;
    text-transform: uppercase;
}

.navbar .navbar-nav {
    display: inline-block;
    float: none;
    vertical-align: top;
    font-size: 15px;
    letter-spacing: 1px;
}

.navbar .navbar-collapse {
    text-align: center;
    padding-right: 0px;
    padding-left: 0px;
}

.navbar-default .navbar-nav>li>a {
    color: #4780d7;
}

.navbar-default .navbar-nav>li>a:hover {
    color: #4780d7;
    text-decoration: underline;
}

.bio-image {
    float: left;
    padding-right: 20px;
}

.bio {
    margin-top: 20px;
}

